# starfish-fl-cli

./: README.md
cli/: .env.example  .env.site2.example  .gitignore  README.md  pyproject.toml
cli/starfish_cli/: client.py  config.py  main.py  output.py
cli/starfish_cli/commands/: artifact.py  dataset.py  project.py  run.py  site.py
controller/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.sh
controller/examples/: logistic_regression.ipynb
controller/starfish/: asgi.py  celery.py  preprocess_dataset.py  settings.py  urls.py  wsgi.py
controller/starfish/controller/: apps.py  forms.py  redis.py  site_status_task.py  tasks_validator.py  urls.py  utils.py  views.py
controller/starfish/controller/file/: file_utils.py
controller/starfish/controller/tasks/: abstract_task.py  linear_regression.py  logistic_regression.py
controller/starfish/controller/tasks/stats_models/: logistic_regression_stats.py  ordinal_logistic_regression.py
controller/starfish/controller/templates/: base.html
controller/starfish/controller/templates/controller/: index.html  project_detail.html  project_join.html  project_new.html  run_detail.html
controller/starfish/controller/templatetags/: fl_tag.py
router/: .env  CI_CD_PIPELINE.md  Dockerfile  README.md  crontab  docker-compose.yml  entrypoint.sh
router/.github/workflows/: router-workflow.yml
router/starfish/router/: tests.py
